--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,24 @@
 /* this is the styling page  */
 body{
-    background-color: rgb(68, 68, 68);
+    background-color: rgb(68, 68, 68);  
+    font-family: 'Oswald', sans-serif;
+    /* font-family: 'Roboto Condensed', sans-serif; */
 }
 
 .hidden {
-    display: none;
+    display: none;      /* removing popular releases */
     visibility: hidden; 
 }
 
 header {
-    padding:15px;
-    background-color:#171717;
+    padding:15px;          /* container for the top title */
+    background-color:#171717;    
+    
 }
 
-h1 {
+h1 {    
     font-size: 30px; 
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Oswald', sans-serif;
     padding: 15px;
     text-align: center;
     background-color: rgb(218, 0, 55);
@@ -33,16 +36,18 @@ form {
     
 }
 
-#movie-name {
+#movie-name-label {
     color: white;
     margin-bottom: 5px;
-    align-items: center;
-    justify-content: center; 
+    display: block;
+    text-align: center;
+    justify-content: center;
+    font-size: small; 
 }
 
 #movieSection{
     grid-column: 2 / 3;
-    grid-row: 1 / 2;
+    grid-row: 2/ 3;
     
 }
 
@@ -56,8 +61,6 @@ form {
 #dropdown-service-button{
     background-color: rgb(218, 0, 55) ;
 }
-
-
 
 #countryName{
     grid-column: 2 / 3;
@@ -77,6 +80,13 @@ form {
     align-items: center;
     
 
+}
+
+#movie-name{
+    width: 80%;
+    height: 100%;
+    align-items: center;
+    margin-left: 10%;
 }
 
 #search-button {
@@ -158,22 +168,76 @@ form {
 
 .cards {
     display: grid; 
-    grid-template-columns: 1fr 1fr 1fr; 
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
     grid-template-rows: 1fr 1fr; 
 }
 
-.newPoster {
-    width: 10vw; 
-    height: 20vw; 
+.newPoster img {
+    height: 20vw;
+    border-radius: 10px; 
+    border-style: solid; 
+    border-color: white; 
+   
+    /* align-items: center; 
+    justify-content: center;  */
+}
+
+.newPoster{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px; 
+    margin: 10px; 
+    background-color: #303146;
+}
+
+.newPoster h2 {
+    font-size: 15px; 
+    font-weight: bold; 
+    color: white; 
+    text-align: center; 
+}
+.poster-country {
+    color: white;
+}
+.poster-service {
+    color: white;
+}
+
+.error-message {
+    margin:10px; 
+    color: white; 
+    text-align: center; 
+    display: block;
+    grid-column: 2 / 4;
+    background-color: lightgrey;
+    border-radius: 15px; 
 
 }
+
+.sad-image {
+    width: 90%;
+    height: 90%; 
+    grid-column: 4/ 5;
+    grid-row: 1 /3;
+    margin: 10px;
+}
+
+.sad-image-cat{
+    width: 90%;
+    height: 90%; 
+    margin: 10px; 
+    grid-column: 1 / 2;
+    grid-row: 1 / 3; 
+}
+
 
 /*Desktop*/
 @media (min-width: 1025px){
     #popular-releases{
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr ;
-    }
+        grid-template-rows: 1fr 1fr 1fr ; 
+    }    
 }
 
 /*Tablet*/
@@ -181,7 +245,7 @@ form {
     #popular-releases{
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-    }  
+    }   
 }
 
 /*Mobile*/
