--- a/styles.css
+++ b/styles.css
@@ -103,10 +103,19 @@ form {
 
 .country-button {
     background-color: white; 
-    padding: 2px; 
-    margin:10px; 
+    padding-left: 10%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    margin-left:5%; 
     align-items: center;
+    border-style: none; 
+    width: 85%;
+    height: 100%;
+    text-align: left;
+}
 
+.country-button:hover {
+    background-color: rgb(185, 179, 179); 
 }
 
 
@@ -152,11 +161,13 @@ form {
     height: 40vw; 
     align-items: center;
     margin: 10px; 
+    border-radius: 15px; 
+    border-style: solid;
+    border-color: white; 
 }
 
 #posterTitle {
     font-size: 30px; 
-    font-family:'Courier New', Courier, monospace;
     padding: 15px;
     text-align: center;
     background-color: rgb(218, 0, 55);
@@ -189,6 +200,9 @@ form {
     padding: 10px; 
     margin: 10px; 
     background-color: #303146;
+    border-radius: 15px; 
+    border-style: solid; 
+    border-color: white; 
 }
 
 .newPoster h2 {
@@ -229,6 +243,14 @@ form {
     margin: 10px; 
     grid-column: 1 / 2;
     grid-row: 1 / 3; 
+}
+
+.poster-description-button {
+    padding: 5px; 
+    margin: 10px; 
+    color: white; 
+    background-color: rgb(218, 0, 55);
+
 }
 
 
