--- a/styles.css
+++ b/styles.css
@@ -253,6 +253,15 @@ form {
 
 }
 
+.watch-button {
+    padding: 5px; 
+    margin: 10px; 
+    color: white; 
+    background-color: rgb(218, 0, 55);
+    border-radius: 10px;
+}
+
+
 
 /*Desktop*/
 @media (min-width: 1025px){
@@ -268,6 +277,10 @@ form {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     }   
+
+    #movie-name-label {
+        font-size: 
+    }
 }
 
 /*Mobile*/
