--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,12 @@ form {
     grid-column: 1 / 2 ; 
     grid-row: 1 / 3; 
     border-color:  rgb(218, 0, 55);
+}
 
+
+.trailer:hover{
+    opacity: 50%;
+    cursor: pointer;
 }
 
 
