--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,9 @@ form {
 
 #search-button{
     border-radius: 10px; 
+    /* width: 75%;
+    align-items: center;
+    margin-left:70px; */
 }
 
 
